BB-1933 Re-generate Client
