# src/Generated/Model/ShopMeta.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\FulfillmentApi\Generated\Model;
+
+class ShopMeta extends \ArrayObject
+{
+    /**
+     * Domain of the Shopify shop.
+     *
+     * @var string|null
+     */
+    protected $shopifyShopDomain;
+    /**
+     * Domain of the Shopify shop.
+     *
+     * @return string|null
+     */
+    public function getShopifyShopDomain() : ?string
+    {
+        return $this->shopifyShopDomain;
+    }
+    /**
+     * Domain of the Shopify shop.
+     *
+     * @param string|null $shopifyShopDomain
+     *
+     * @return self
+     */
+    public function setShopifyShopDomain(?string $shopifyShopDomain) : self
+    {
+        $this->shopifyShopDomain = $shopifyShopDomain;
+        return $this;
+    }
+}
